Uploadpage File Limitation

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 bootstrap_example*.html
-
+.gitignore
+.DS_Store
+Documents/.DS_Store
+html5up-strongly-typed/.DS_Store
+html5up-strongly-typed/assets/.DS_Store
+html5up-strongly-typed/assets/css/.DS_Store
+html5up-strongly-typed/assets/css/images/.DS_Store
+html5up-strongly-typed/assets/fonts/.DS_Store
+html5up-strongly-typed/assets/js/.DS_Store
+html5up-strongly-typed/assets/sass/.DS_Store
+html5up-strongly-typed/assets/sass/libs/.DS_Store
+html5up-strongly-typed/images/.DS_Store
+resources/.DS_Store
+resources/assets/.DS_Store
+resources/assets/css/.DS_Store
+resources/bodytype/.DS_Store
+resources/images/.DS_Store
